# Vora.IA

./: .editorconfig  .gitattributes  .gitignore  AGENT_MEMORY_IMPROVEMENTS.md  BUDGET_DATES_WIDGETS_IMPLEMENTATION.md  BUGFIX_AUTH_CHAT.md  BUGFIX_HERO_TO_CHAT_MESSAGE.md  CHANGELOG.md  CHAT_MAP_INTEGRATION_IMPLEMENTATION.md  CHAT_PERSISTENCE_IMPLEMENTATION.md  CONTRIBUTING.md  CONVERSATIONAL_UI_IMPLEMENTATION.md  Intro-Vora.md  MANDATORY_FIELDS_IMPLEMENTATION.md  Plan-tecnico-Vora.md  QUICKSTART.md  README.md  STATUS.md  TESTING_CONVERSATIONAL_UI.md  WIDGET_FLOW_REFACTOR.md  fase-1-configuración-inicial.md  fase-2-backend-agentes-IA.md  fase-3-frontend-ux.md  fase-4-integracion-testing.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  .watchignore  AGENTS_README.md  BUGFIX_OUTPUT_PARSING.md  CONVERSATIONAL_PROMPTS.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE2_STATUS.md  QUICKSTART.md  README.md  SOLUCION_OUTPUT_PARSING.md  USAGE_EXAMPLES.md  VERIFICATION_CHECKLIST.md  debug_chat_endpoint.py  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh  start-dev.ps1  start.ps1  test_agent.py  test_auth_endpoint.py  test_conversational_flow.py  test_output_parsing_fix.py
backend/app/: main.py
backend/app/agents/: graph.py  state.py
backend/app/config/: logging.py  security.py  settings.py
backend/app/core/: dependencies.py  exceptions.py  middleware.py
backend/app/services/: airline_deeplinks.py  amadeus_client.py  apify_client.py  routes_client.py  serpapi_client.py  supabase_client.py
backend/tests/: conftest.py  test_agents.py  test_google_places.py  test_main.py
(+184 files in other folders)
